implement word-search with dictionaryapi

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,21 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EngGo"
         tools:targetApi="31">
-        <activity android:name=".activities.CongratulationsActivity" />
+
 
         <activity
             android:name=".MainActivity"
             android:exported="false" />
+
+
+        <!--//////////////////////////////////////////////////////////////////////////-->
         <activity
             android:name=".activities.SentenceBuilderActivity"
+            android:exported="true">
+        </activity>
+        <!--//////////////////////////////////////////////////////////////////////////-->
+        <activity
+            android:name=".activities.DictionaryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,6 +39,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <!--//////////////////////////////////////////////////////////////////////////-->
+        <activity android:name=".activities.CongratulationsActivity" />
+        <!--//////////////////////////////////////////////////////////////////////////-->
+
+
     </application>
 
 </manifest>
