--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,45 +17,42 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".activities.ForgotPasswordActivity"
-            android:exported="false" />
-        <activity android:name=".activities.CongratulationsActivity" />
-
-        <activity
             android:name=".MainActivity"
             android:exported="false" />
 
+        <activity
+            android:name=".activities.ForgotPasswordActivity"
+            android:exported="false" />
 
-        <!--//////////////////////////////////////////////////////////////////////////-->
+        <activity
+            android:name=".activities.RegisterActivity"
+            android:exported="false">
+        </activity>
+
         <activity
             android:name=".activities.LoginActivity"
             android:exported="true">
         </activity>
+
         <!--//////////////////////////////////////////////////////////////////////////-->
         <activity
             android:name=".activities.DictionaryActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <!--//////////////////////////////////////////////////////////////////////////-->
         <activity android:name=".activities.CongratulationsActivity" />
         <!--//////////////////////////////////////////////////////////////////////////-->
-
-
-        <activity
-            android:name=".activities.RegisterActivity"
-            android:exported="false">
-        </activity>
         <activity
             android:name=".activities.SentenceBuilderActivity"
             android:exported="false">
         </activity>
-
+        <!--//////////////////////////////////////////////////////////////////////////-->
+        <activity android:name=".activities.WordDetailActivity" />
+        <!--//////////////////////////////////////////////////////////////////////////-->
     </application>
 
 </manifest>
