--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,15 +37,23 @@
         </activity>
 
         <!--//////////////////////////////////////////////////////////////////////////-->
-        <activity android:name=".activities.FavoriteWordActivity" />
-
-        <activity
-            android:name=".activities.DictionaryActivity"
+        <activity android:name=".activities.FlashCardActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+
+        <activity android:name=".activities.FavoriteWordActivity" />
+
+        <activity
+            android:name=".activities.DictionaryActivity"
+            android:exported="true">
+<!--            <intent-filter>-->
+<!--                <action android:name="android.intent.action.MAIN" />-->
+<!--                <category android:name="android.intent.category.LAUNCHER" />-->
+<!--            </intent-filter>-->
         </activity>
         <!--//////////////////////////////////////////////////////////////////////////-->
         <activity android:name=".activities.CongratulationsActivity" />
