--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,6 @@
         <activity
             android:name=".MainActivity"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
 
         <activity
@@ -36,24 +32,26 @@
 
         <activity
             android:name=".activities.LoginActivity"
-            android:exported="true"/>
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
 
-        <!--//////////////////////////////////////////////////////////////////////////-->
         <activity android:name=".activities.FavoriteWordActivity" />
 
         <activity
             android:name=".activities.DictionaryActivity"
             android:exported="true"/>
-        <!--//////////////////////////////////////////////////////////////////////////-->
         <activity android:name=".activities.CongratulationsActivity" />
-        <!--//////////////////////////////////////////////////////////////////////////-->
+
         <activity
             android:name=".activities.SentenceBuilderActivity"
             android:exported="false">
         </activity>
-        <!--//////////////////////////////////////////////////////////////////////////-->
+
         <activity android:name=".activities.WordDetailActivity" />
-        <!--//////////////////////////////////////////////////////////////////////////-->
     </application>
 
 </manifest>
